--- a/projeto-login/estilo/media-query.css
+++ b/projeto-login/estilo/media-query.css
@@ -26,19 +26,26 @@
     body {
         background-image: linear-gradient(to bottom, #5f2c82, rgba(0, 0, 0, 0.696));
     }
-    
+
     section#login {
         width: 950px;
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
