--- a/projeto-login/estilo/style.css
+++ b/projeto-login/estilo/style.css
@@ -13,7 +13,7 @@ lilás: #5f2c82
 }
 
 html, body {
-    background-color: #5f2c82;
+    background-color: #3d1e52;
     height: 100vh;
     width: 100vw;
 }
@@ -42,7 +42,7 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagem/roxo.png) no-repeat;
+    background: #3d1e52 url(../imagem/roxo.png) no-repeat;
     background-size: cover;
     background-position: center center;
     height: 200px;
@@ -60,5 +60,86 @@ div#formulario > h1 {
 
 div#formulario > p {
     padding-bottom: 10px;
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #8431ba;
+    border: 2px solid #8431ba;
+    display: block;
+    width: 70%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > span {
+    color: #3d1c53;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    padding: 4px;
+}
+
+div.campo > input {
+    background-color: #deb9f7a2;
+    font-size: 1em;
+    width: 71.7%;
+    height: 100%;
+    transform: translateY(-11.3px);
+    padding: 4px;
+    border: 0px;
+    border-radius: 8px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
+form > input[type=submit] {
+    margin-top: 10px;
+    display: block;
+    font-size: 1em;
+    width: 70%;
+    height: 40px;
+    background-color: #3d1c53;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #5f2c82;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    width: 70%;
+    height: 40px;
+    padding-top: 6px;
+    margin-top: 5px;
+    background-color: white;
+    color: #3d1c53;
+    border: none;
+    border: 1px solid #3d1c53;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > a.botao:hover {
+    background-color: #3d1c53;
+    color: white;
+    border: 1px solid #5f2c82;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+form > a.botao > span {
     font-size: 0.8em;
 }
